[gd_scene load_steps=68 format=2]

[ext_resource path="res://Assets/Art Assets/UI/lostlandslogo Loop Animation.png" type="Texture" id=1]
[ext_resource path="res://Assets/Art Assets/UI/lostlandslogo Animation 1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Scenes/Main Menu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Art Assets/Backgrounds/MainMenuBackground.jpg" type="Texture" id=4]
[ext_resource path="res://Assets/Art Assets/UI/UI Buttons(2) split/controls.png" type="Texture" id=5]
[ext_resource path="res://GoodbyeStudios_WIP_icon.png" type="Texture" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]
[ext_resource path="res://GoodbyeStudios_WIP_icon_no_words.png" type="Texture" id=8]
[ext_resource path="res://Assets/Art Assets/UI/UI Buttons(2) split/quit.png" type="Texture" id=9]
[ext_resource path="res://Assets/Art Assets/UI/UI Buttons(2) split/new.png" type="Texture" id=10]
[ext_resource path="res://Assets/Art Assets/UI/UI Buttons(2) split/cont.png" type="Texture" id=11]
[ext_resource path="res://Assets/Art Assets/UI/UI Buttons(2) split/credits.png" type="Texture" id=12]
[ext_resource path="res://Assets/Art Assets/UI/UI Buttons(2) split/load.png" type="Texture" id=13]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 80, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 80, 48, 80, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 160, 48, 80, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 80, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 80, 96, 80, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 160, 96, 80, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 144, 80, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 80, 144, 80, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 160, 144, 80, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 80, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 80, 192, 80, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 80, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 80, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 80, 48, 80, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 160, 48, 80, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 80, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 80, 96, 80, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 160, 96, 80, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 0, 144, 80, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 80, 144, 80, 48 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 160, 144, 80, 48 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 80, 48 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 80, 192, 80, 48 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 160, 192, 80, 48 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 80, 48 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 80, 240, 80, 48 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 160, 240, 80, 48 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 0, 288, 80, 48 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 80, 288, 80, 48 )

[sub_resource type="SpriteFrames" id=35]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "intro",
"speed": 8.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "loop",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 96, 31 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 13 )
region = Rect2( 96, 0, 96, 31 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ SubResource( 36 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ) ],
"loop": false,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 48, 15.5 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 96, 31 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 96, 31 )

[sub_resource type="SpriteFrames" id=42]
animations = [ {
"frames": [ SubResource( 40 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ SubResource( 41 ) ],
"loop": false,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 96, 31 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 10 )
region = Rect2( 96, 0, 96, 31 )

[sub_resource type="SpriteFrames" id=45]
animations = [ {
"frames": [ SubResource( 43 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ SubResource( 44 ) ],
"loop": false,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 96, 31 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 96, 31 )

[sub_resource type="SpriteFrames" id=48]
animations = [ {
"frames": [ SubResource( 46 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ SubResource( 47 ) ],
"loop": false,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 96, 31 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 12 )
region = Rect2( 96, 0, 96, 31 )

[sub_resource type="SpriteFrames" id=51]
animations = [ {
"frames": [ SubResource( 49 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ SubResource( 50 ) ],
"loop": false,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 96, 31 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 96, 31 )

[sub_resource type="SpriteFrames" id=54]
animations = [ {
"frames": [ SubResource( 52 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ SubResource( 53 ) ],
"loop": false,
"name": "1",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="MainMenuBackground" type="Sprite" parent="."]
position = Vector2( 256.427, 149.75 )
scale = Vector2( 0.667778, 0.667778 )
texture = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 256, 64 )
scale = Vector2( 2, 2 )
frames = SubResource( 35 )
animation = "intro"

[node name="Icon" type="Sprite" parent="."]
visible = false
position = Vector2( 423, 262 )
scale = Vector2( 0.609375, 0.609375 )
texture = ExtResource( 7 )

[node name="GoodbyeStudiosWipIcon" type="Sprite" parent="."]
visible = false
position = Vector2( 90.0024, 262.003 )
scale = Vector2( 0.0348171, 0.0348171 )
texture = ExtResource( 6 )

[node name="GoodbyeStudiosWipIconNoWords" type="Sprite" parent="."]
visible = false
position = Vector2( 89.3124, 261.945 )
scale = Vector2( 0.0579624, 0.0579625 )
texture = ExtResource( 8 )

[node name="Menu Buttons" type="Node2D" parent="."]
position = Vector2( 256, 202 )

[node name="Load" type="Area2D" parent="Menu Buttons"]

[node name="button" type="AnimatedSprite" parent="Menu Buttons/Load"]
position = Vector2( 0, -62.5 )
frames = SubResource( 38 )
animation = "0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu Buttons/Load"]
position = Vector2( 0, -62.5 )
shape = SubResource( 39 )

[node name="Cont" type="Area2D" parent="Menu Buttons"]
visible = false

[node name="button" type="AnimatedSprite" parent="Menu Buttons/Cont"]
position = Vector2( 0, -62.5 )
frames = SubResource( 42 )
animation = "0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu Buttons/Cont"]
position = Vector2( 0, -62.5 )
shape = SubResource( 39 )

[node name="New" type="Area2D" parent="Menu Buttons"]

[node name="button" type="AnimatedSprite" parent="Menu Buttons/New"]
position = Vector2( 0, -31.5 )
frames = SubResource( 45 )
animation = "0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu Buttons/New"]
position = Vector2( 0, -31.5 )
shape = SubResource( 39 )

[node name="Controls" type="Area2D" parent="Menu Buttons"]

[node name="button" type="AnimatedSprite" parent="Menu Buttons/Controls"]
position = Vector2( 0, -0.5 )
frames = SubResource( 48 )
animation = "0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu Buttons/Controls"]
position = Vector2( 0, -0.5 )
shape = SubResource( 39 )

[node name="Credits" type="Area2D" parent="Menu Buttons"]

[node name="button" type="AnimatedSprite" parent="Menu Buttons/Credits"]
position = Vector2( 0, 30.5 )
frames = SubResource( 51 )
animation = "0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu Buttons/Credits"]
position = Vector2( 0, 30.5 )
shape = SubResource( 39 )

[node name="Quit" type="Area2D" parent="Menu Buttons"]

[node name="button" type="AnimatedSprite" parent="Menu Buttons/Quit"]
position = Vector2( 0, 61.5 )
frames = SubResource( 54 )
animation = "0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu Buttons/Quit"]
position = Vector2( 0, 61.5 )
shape = SubResource( 39 )

[connection signal="mouse_entered" from="Menu Buttons/Load" to="." method="_on_Load_mouse_entered"]
[connection signal="mouse_exited" from="Menu Buttons/Load" to="." method="_on_Load_mouse_exited"]
[connection signal="mouse_entered" from="Menu Buttons/Cont" to="." method="_on_Cont_mouse_entered"]
[connection signal="mouse_exited" from="Menu Buttons/Cont" to="." method="_on_Cont_mouse_exited"]
[connection signal="mouse_entered" from="Menu Buttons/New" to="." method="_on_New_mouse_entered"]
[connection signal="mouse_exited" from="Menu Buttons/New" to="." method="_on_New_mouse_exited"]
[connection signal="mouse_entered" from="Menu Buttons/Controls" to="." method="_on_Controls_mouse_entered"]
[connection signal="mouse_exited" from="Menu Buttons/Controls" to="." method="_on_Controls_mouse_exited"]
[connection signal="mouse_entered" from="Menu Buttons/Credits" to="." method="_on_Credits_mouse_entered"]
[connection signal="mouse_exited" from="Menu Buttons/Credits" to="." method="_on_Credits_mouse_exited"]
[connection signal="mouse_entered" from="Menu Buttons/Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="mouse_exited" from="Menu Buttons/Quit" to="." method="_on_Quit_mouse_exited"]
